[gd_scene load_steps=4 format=3 uid="uid://c44ba86wa1n"]

[ext_resource type="Script" uid="uid://rmdj655oow8x" path="res://scenes/main_game.gd" id="1_hat22"]
[ext_resource type="PackedScene" uid="uid://v5lwto3kifoo" path="res://scenes/ui/components/MainMenu.tscn" id="2_xej52"]
[ext_resource type="PackedScene" uid="uid://mmkn1odmfgem" path="res://scenes/ui/PauseMenu.tscn" id="3_p73vr"]

[node name="MainGame" type="Node3D"]
process_mode = 3
script = ExtResource("1_hat22")

[node name="Level" type="Node" parent="."]
process_mode = 1

[node name="PauseMenu" parent="." instance=ExtResource("3_p73vr")]
visible = false

[node name="MainMenu" parent="." instance=ExtResource("2_xej52")]

[connection signal="quit_game" from="PauseMenu" to="." method="_on_pause_menu_quit_game"]
[connection signal="resume_game" from="PauseMenu" to="." method="_on_pause_menu_resume_game"]
[connection signal="play_game" from="MainMenu" to="." method="_on_main_menu_play_game"]
[connection signal="quit_game" from="MainMenu" to="." method="_on_main_menu_quit_game"]
